src/test/ui/generic-associated-types/empty_generics.stderr
error: expected one of `#`, `>`, `const`, identifier, or lifetime, found `,`
  --> $DIR/empty_generics.rs:2:14
   |
LL | trait Foo {
   |           - while parsing this item list starting here
LL |     type Bar<,>;
   |              ^ expected one of `#`, `>`, `const`, identifier, or lifetime
LL |
LL | }
   | - the item list ends here

error: aborting due to previous error

